# dbt-adapters

.github/workflows/: publish-dbt-iceberg.yml  publish-dbt-spark-submit.yml  pypi-publish-dbt-spark-submit.yml
dbt-iceberg/: README.md  hatch.toml  pyproject.toml
dbt-iceberg/docker/: runner.Dockerfile
dbt-iceberg/src/dbt/adapters/iceberg/: __init__.py  column.py  connections.py  impl.py  polars_connection.py  python_submissions.py  relation.py  session.py
dbt-iceberg/src/dbt/adapters/spark/: connections.py  impl.py  python_submissions.py
dbt-iceberg/src/dbt/include/iceberg/: dbt_project.yml  profile_template.yml
dbt-iceberg/src/dbt/include/iceberg/macros/: adapters.sql  apply_grants.sql
dbt-iceberg/src/dbt/include/iceberg/macros/materializations/: clone.sql  seed.sql  snapshot.sql  table.sql  view.sql
dbt-iceberg/src/dbt/include/iceberg/macros/materializations/incremental/: column_helpers.sql  incremental.sql  strategies.sql  validate.sql
dbt-iceberg/src/dbt/include/iceberg/macros/utils/: any_value.sql  array_append.sql  array_concat.sql  array_construct.sql  assert_not_null.sql  bool_or.sql  concat.sql  date.sql  dateadd.sql  datediff.sql  escape_single_quotes.sql  listagg.sql  safe_cast.sql  split_part.sql  timestamps.sql
dbt-iceberg/src/dbt/include/spark/: profile_template.yml
dbt-iceberg/tests/functional/fixtures/: profiles.py  start_databricks_cluster.py
dbt-iceberg/tests/unit/: test_adapter.py  test_adapter_telemetry.py  test_column.py  test_credentials.py  test_macros.py  test_polling.py  test_python_submissions.py
dbt-iceberg/tests/unit/fixtures/: profiles.py
dbt-spark/: README.md  docker-compose.yml  hatch.toml  pyproject.toml
dbt-spark/docker/: spark-defaults.conf
dbt-spark/src/dbt/adapters/spark/: connections.py
